shopping-list/index.css
body {
    margin: 0;
    font-family: sans-serif;
}


/* grid containers area */
#container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: minmax(100vh, auto);
}

#left-container {
    background-color: darkorange;
    display: grid;
    grid-template-rows: 10% 60% 30%;
    justify-items: center;
}

#right-container {
    background-color: cyan;
    display: grid;
    grid-template-rows: 10% 90%;
}


/* headers/notification message */
h2 {
    text-align: center;
}

p#is-list-empty {
    text-align: center;
    font-size: 20px;
    font-weight: bolder;
    color: red;
    display: none;
}


/* products list area */
div#list-container {
    width: 80%;
    min-width: 445px;
    border-radius: 20px;
    background-color: cornflowerblue;
    height: 90%;
    overflow-y: auto;
}

ul#products-list {
    align-self: flex-start;
    border-radius: 20px;
    padding: 10px 10px 10px 10px;
    width: auto;
    height: auto;
    min-width: 390px;
    position: relative;
    max-height: 250px;
    visibility: visible;
}

li {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    height: 20px;
    padding: 10px;
    list-style-type: none;
    background-color: navajowhite;
    margin-top: 10px;
    border-left: solid 3px mediumvioletred;
    border-right: solid 3px mediumvioletred;
}

li span.product-price {
    margin-right: 10px;
}

span {
    font-size: 20px;
    text-align: center;
}

span.product-name {
    margin-right: auto;
}

li span.buy-btn, li span.remove-btn-list, table .remove-btn-table {
    cursor: pointer;
    user-select: none;
    outline: none;
}

li span.buy-btn {
    width: 50px;
    background-color: lightgreen;
    border-radius: 5px;
    margin-right: 10px;
}

li span.remove-btn-list {
    width: 75px;
    background-color: lightsalmon;
    border-radius: 5px;
    margin-right: 10px;
}


li span.buy-btn:hover, li span.remove-btn-list:hover {
    background-color: cornflowerblue;
}

li span.buy-btn:active, li span.remove-btn-list:active {
    background-color: lightsteelblue;
}


/* form area */
label {
    font-size: 20px;
}

form {
    display: grid;
    grid-template-rows: 33% 33% 33%;
    align-items: flex-end;
}

input {
    display: block;
    font-size: 20px;
    height: 25px;
    outline: none;
}

#add-product-btn {
    font-size: 15px;
    height: 30px;
    background-color: turquoise;
    border-radius: 5px;
    border: none;
    outline: none;
    align-self: center;
}

#add-product-btn:hover {
    background-color: darkcyan;
}

#add-product-btn:active {
    background-color: darkgoldenrod;
}


/* bought items (table) area*/
div.table-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 80%;
    overflow-y: auto;
}

table {
    visibility: hidden;
    width: 98%;
    border-collapse: collapse;
    font-size: 20px;
    margin-top: 20px;
}

th {
    position: sticky;
    top: -1px;
    background-color: greenyellow;
    border: 1px solid #8a2be2;
    box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
    text-align: center;
    padding: 8px;
}

td {
    border: 1px solid #8a2be2;
    text-align: center;
    padding: 8px;
    user-select: text;
}

tr {
    border: 1px solid #8a2be2;
}

tr:nth-child(even) {
    background-color: #e8e8e8;
}

tr:nth-child(odd) {
    background-color: #fff;
}

tr:hover {
    background-color: lightblue;
}

tfoot td {
    background-color: lightsalmon;
    font-weight: bold;
    position: sticky;
    bottom: 0;
}

span.remove-btn-table {
    float: right;
    width: 30px;
    color: red;
    background-color: orange;
    border-radius: 15px;
}

span.remove-btn-table:hover {
    background-color: red;
    color: orange;
}

span.remove-btn-table:active {
    background-color: black;
    color: white;
}


/* responsive design section*/
/* for screen between 372 and 845 px*/
@media screen and (min-width: 372px) and (max-width: 845px) {

    /* grid containers area*/
    #container {
        grid-template-columns: 100%;
        grid-auto-rows: minmax(500px, auto);
    }

    #left-container {
        grid-template-rows: 10% 30% 60%;
        grid-template-areas:
        "title"
        "form"
        "list";
    }

    /* headers/notification message */
    h2#left-header {
        align-self: center;
        grid-area: title;
    }

    /*form area*/
    form {
        align-items: flex-start;
        grid-area: form;
    }

    input[type="text"], input[type="number"] {
        width: 175px;
    }

    #add-product-btn {
        align-self: flex-start;
    }

    label {
        display: none;
    }


    /* list area*/
    div#list-container {
        width: 100%;
        min-width: 300px;
        border-bottom: solid 10px cornflowerblue;
        border-top: solid 7px cornflowerblue;
    }

    ul#products-list {
        background-color: inherit;
        align-self: flex-start;
        border-radius: 20px;
        min-width: 350px;
        grid-area: list;
    }

    li {
        height: 10px;
        margin-top: 0;
        margin-bottom: 10px;
    }

    li span.product-price {
        font-size: 15px;
        font-weight: bold;
    }

    li span.remove-btn-list {
        padding-top: 3px;
        height: 20px;
        font-size: 15px;
        font-weight: bold;
    }

    li span.buy-btn {
        padding-top: 3px;
        height: 20px;
        font-size: 15px;
        font-weight: bold;
    }

    li span.product-name {
        padding-top: 3px;
        height: 20px;
        font-size: 15px;
        font-weight: bold;
    }


    /* bought items (table) area*/
    div.table-container {
        justify-content: center;
    }

    h2#right-header {
        align-self: center;
    }

    table {
        font-size: 14px;
    }

    th {
        top: -3px;
    }

    span.remove-btn-table {
        width: 17px;
        height: 17px;
        font-size: 13px;
    }
}

/* for screen between 300 and 372 px*/
@media screen and (min-width: 300px) and (max-width: 372px) {

    /* grid containers area*/
    #container {
        grid-template-columns: 100%;
        grid-auto-rows: minmax(500px, auto);
    }

    #left-container {
        grid-template-rows: 10% 30% 60%;
        grid-template-areas:
        "title"
        "form"
        "list";
    }

    /* headers/notification message */
    h2#left-header {
        align-self: center;
        grid-area: title;
    }

    /*form area*/
    form {
        align-items: flex-start;
        grid-area: form;
    }

    input[type="text"], input[type="number"] {
        width: 175px;
    }

    #add-product-btn {
        align-self: flex-start;
    }

    label {
        display: none;
    }


    /* list area*/
    div#list-container {
        min-width: 300px;
        border-bottom: solid 10px cornflowerblue;
        border-top: solid 7px cornflowerblue;
    }

    ul#products-list {
        background-color: inherit;
        align-self: flex-start;
        border-radius: 20px;
        min-width: 250px;
        grid-area: list;
    }

    li {
        height: 20px;
        margin-top: 0;
        margin-bottom: 10px;
        margin-right: 10px;
    }

    li span.product-price {
        font-size: 15px;
        font-weight: bold;
    }

    li span.remove-btn-list {
        padding-top: 5px;
        height: 22px;
        font-size: 15px;
        font-weight: bold;
    }

    li span.buy-btn {
        padding-top: 5px;
        height: 22px;
        font-size: 15px;
        font-weight: bold;
    }

    li span.product-name {
        padding-top: 5px;
        margin-bottom: 3px;
        height: 20px;
        font-size: 13px;
        font-weight: bold;
    }


    /* bought items (table) area*/
    div.table-container {
        justify-content: center;
    }

    h2#right-header {
        align-self: center;
    }

    table {
        font-size: 14px;
        min-width: 100px;
    }

    th {
        top: -3px;
    }

    span.remove-btn-table {
        width: 17px;
        height: 17px;
        font-size: 13px;
    }
}

